stop horizontal scroll

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -9,3 +9,8 @@
 main {
   color: black;
 }
+
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
